--- a/app/src/main/res/layout/appointments_fragment.xml
+++ b/app/src/main/res/layout/appointments_fragment.xml
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:src="@drawable/ic_baseline_add_24"
+            app:backgroundTint="#D50000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
