--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -38,7 +38,7 @@
         app:layout_constraintHorizontal_bias="0.135"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.148" />
+        app:layout_constraintVertical_bias="0.105" />
 
     <TextView
         android:id="@+id/course_id_head"
@@ -252,11 +252,11 @@
         android:layout_height="44dp"
         android:background="@drawable/check"
         app:backgroundTint="#D50000"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/del_course"
         app:layout_constraintEnd_toEndOf="@+id/instructions"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/instructions"
-        app:layout_constraintTop_toBottomOf="@+id/instructions"
+        app:layout_constraintStart_toEndOf="@+id/del_course"
+        app:layout_constraintTop_toTopOf="@+id/del_course"
         app:layout_constraintVertical_bias="0.299" />
 
     <Button
@@ -270,19 +270,36 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/ins_head"
         app:layout_constraintTop_toBottomOf="@+id/ins_head"
-        app:layout_constraintVertical_bias="0.299" />
+        app:layout_constraintVertical_bias="0.072" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/add_med"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Medicine"
         app:backgroundTint="#D50000"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/del_course"
         app:layout_constraintEnd_toStartOf="@+id/sav_course"
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toEndOf="@+id/del_course"
-        app:layout_constraintTop_toBottomOf="@+id/instructions"
+        app:layout_constraintTop_toTopOf="@+id/del_course"
         app:layout_constraintVertical_bias="0.302" />
+
+    <ListView
+        android:id="@+id/listview2"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/border_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_med"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
